[package]
name = "rcrypto"
version = "0.1.1"
authors = ["mengsuenyan <mengsuenyan@163.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A rust cryptography library"
readme = "Readme.md"
repository = "https://github.com/mengsuenyan/rcrypto.git"
documentation = "https://docs.rs/rcrypto/0.1.0/rcrypto/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rmath = "0.1.2"


